--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
-        <module>queensfarming-plugin</module>
+        <module>queensfarming-ui</module>
         <module>queensfarming-adapters</module>
         <module>queensfarming-application</module>
         <module>queensfarming-domain</module>
