--- a/queensfarming-adapters/pom.xml
+++ b/queensfarming-adapters/pom.xml
@@ -18,6 +18,12 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>de.dhbw.ase</groupId>
+            <artifactId>queensfarming-application</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <properties>
