--- a/queensfarming-application/pom.xml
+++ b/queensfarming-application/pom.xml
@@ -24,6 +24,11 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>antlr</groupId>
+            <artifactId>antlr</artifactId>
+            <version>2.7.2</version>
+        </dependency>
     </dependencies>
 
     <properties>
